--- a/app.json
+++ b/app.json
@@ -49,5 +49,5 @@
     "borderStyle": "white",
     "position": "bottom"
   },
-  "sitemapLocation": "sitemap.json”
+  "sitemapLocation": "sitemap.json"
 }
